attempting to fix mobile menu to stop scrolling items behind while open

--- a/src/App.scss
+++ b/src/App.scss
@@ -94,6 +94,7 @@
       }
     }
     .insideMobileHeader{
+      position: fixed;
       width: 100vw;
       top: 61px;
       left: 0;
